syntax = "proto3"; //Specify proto3 version.

package myTodos; //Optional: unique package name.

//Service. define the methods that the grpc server can expose to the client.
service TodosService {
  // rpc Insert (Todo) returns (Empty);
  // rpc List (Empty) returns (TodoList);
  rpc Update (Todo) returns (Empty);
  rpc Remove (TodoId) returns (Empty);
}

// Message Type definition for an Todos.
message Todo {
  int32 todo_id = 1;
  string title = 2;
  string description = 3;
  bool done = 4;

}

message TodoList {
  repeated Todo todo = 1;
}

message TodoId {
  int32 todo_id = 1;
}

message Empty {}
